test/build_failure/type_error1.expect
ERROR: Diff
Type mismatch: Expect = Unit, but Actual = Int
File: "", line 1-3, charactors 0-1

