test/build_failure/type_error1.rill
def main(): unit {
   42
}
